syntax = "proto3";

option java_package = "ru.clevertec.newsservice.dto.proto";
option java_multiple_files = true;

message NewsResponse {
  int64 id = 1;
  string time = 2;
  string title = 3;
  string text = 4;
  string email = 5;
}

message NewsResponseList {
  repeated NewsResponse news = 1;
}
